# ecommerce-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
ecommerce/: settings.py  urls.py
products/: urls.py  views.py
products/static/products/css/: styles.css
products/templates/: product_detail.html  product_list.html
static/css/: globalstyles.css
templates/: base.html
